--- a/index.html
+++ b/index.html
@@ -65,71 +65,70 @@ info@devstudio.com
     </div>
 </section>
         <!--feature-->
-        
-<section class="our-features sections">
+<section class="features sections">
 <div class="container">
 <h2 class="visually-hidden">Наші особливості</h2>
-<ul class="advantage-list list">
-    <li class="item-feature">
-        <div class="icons-feature">
+<ul class="features-list list">
+    <li class="feature__item">
+        <div class="features__icon">
         <svg aria-label="icon-antenna" class="icon-antenna" width="70">
             <use href="./images/sprite.svg#icon-antenna"></use>
         </svg>
         </div>
-<h3 class="feature">Увага до деталей</h3>
-<p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+<h3 class="feature__title">Увага до деталей</h3>
+<p class="features__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
     </li>
-    <li class="item-feature">
-        <div class="icons-feature">
+    <li class="feature__item">
+        <div class="features__icon">
         <svg aria-label="icon-clock" class="icon-clock" width="70">
             <use href="./images/sprite.svg#icon-clock"></use>
         </svg>
         </div>
-            <h3 class="feature">Пунктуальність</h3>
-            <p class="features-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="feature__title">Пунктуальність</h3>
+            <p class="features__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
     </li>
-    <li class="item-feature">
-        <div class="icons-feature">
+    <li class="feature__item">
+        <div class="features__icon">
         <svg aria-label="icon-diagram" class="icon-diagram" width="70">
             <use href="./images/sprite.svg#icon-diagram"></use>
         </svg>
         </div>
-            <h3 class="feature">Планування</h3>
-            <p class="features-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="feature__title">Планування</h3>
+            <p class="features__text">Так само консультація з широким активом значною мірою зумовлює.</p>
     </li>
-    <li class="item-feature">
-        <div class="icons-feature">
+    <li class="feature__item">
+        <div class="features__icon">
         <svg aria-label="icon-astronaut" class="icon-astronaut" width="70">
             <use href="./images/sprite.svg#icon-astronaut"></use>
             </svg>
             </div>
-            <h3 class="feature">Сучасні технології</h3>
-            <p class="features-text">Значимість цих проблем настільки очевидна, що реалізація планових <br> завдань.</p>
+            <h3 class="feature__title">Сучасні технології</h3>
+            <p class="features__text">Значимість цих проблем настільки очевидна, що реалізація планових <br> завдань.</p>
     </li>
 </ul>
 </div>
 </section>
         <!--services -->
-<section class="boxes sections">
+<section class="services">
     <div class="container">
-        <h2 class="title-services">Чим ми займаємося</h2>
-            <ul class="list-item-services">
-                <li class="photo-service">
-                    <div class="photo-work">            
+        <h2 class="services__title">Чим ми займаємося</h2>
+            <ul class="services__list">
+                <li class="services__photo">
+                    <div>            
                     <img src="./images/photo1.jpg" alt="розробник пише код" width="370"/>
-                    <h3 class="text-over-photo">Декстопні додатки</h3>
+                    <h3 class="services_text">Декстопні додатки</h3>
                 </div>
                 </li>
-                <li class="photo-service">
-                    <div class="photo-work">
+                <li class="services__photo">
+                    <div>
                     <img src="./images/photo2.jpg" alt="додатки до телефону" width="370"/>
-                    <h3 class="text-over-photo">Мобільні додатки</h3>
+                    <h3 class="services_text">Мобільні додатки</h3>
                 </div>
                 </li>
-                <li class="photo-service">
-                    <div class="photo-work">
+                <li class="services__photo">
+                    <div>
                     <img src="./images/photo3.jpg" alt="розробка дизайну" width="370"/>
-                    <h3 class="text-over-photo">Дизайнерські рішення</h3>
+                    <h3 class="services_text">Дизайнерські рішення</h3>
                 </div>
                 </li>
             </ul>
